[gd_scene load_steps=2 format=3 uid="uid://c3jvbndgtg5c8"]

[ext_resource type="Script" path="res://char/Dash.gd" id="1_n87he"]

[node name="Dash" type="Node2D"]
script = ExtResource("1_n87he")

[node name="DashDuration" type="Timer" parent="."]
one_shot = true

[node name="GhostTimer" type="Timer" parent="."]
wait_time = 0.02

[connection signal="timeout" from="DashDuration" to="." method="_on_dash_duration_timeout"]
[connection signal="timeout" from="GhostTimer" to="." method="_on_ghost_timer_timeout"]
